adaptation jdk 8 syntax (#4)
* feat: add new api to interface

DefaultExpressionOperator#not(Collection<? extends T>)
DefaultExpressionOperator#notIn(Collection<? extends T>)

* test: reorganizing the test code

* build: update version 0.0.2

* feat: add new api to interface

DefaultExpressionOperator#not(Collection<? extends U>)
DefaultExpressionOperator#notIn(Collection<? extends U>)

* feat: add new api to interface

io.github.genie.sql.api.Update

* feat: support Serializable for io.github.genie.sql.api.From

* build: update hibernate version

* refactor: canonical naming

* feat: distinguish between joinName and joinColumnName in interface AnyToOneAttribute

* feat: reorganize code

* feat: reorganize code

* feat: simplify api organization

* build: update lombok scope

* build: update url

* refactor: adaptation jdk 8 syntax

* refactor: adaptation jdk 8 syntax

* refactor: add api Q.orderBy

* refactor: rationalize variable naming

* style: format code

---------


Co-authored-by: Huang Chengwei <huang.chengwei@icloud.com>